# W4_AgenticSupplyChain

./: .env  .env.example  CLAUDE.md  Dockerfile  PRODUCT_PLAN.md  README.md  alembic.ini  docker-compose.yml  index.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
scripts/: seed_data.py
src/orchestrator/: config.py  main.py
src/orchestrator/agents/: graph.py  state.py
src/orchestrator/agents/nodes/: analyzer.py  executor.py  hitl_gate.py  monitor.py  recommender.py  simulator.py
src/orchestrator/agents/tools/: search_tool.py
src/orchestrator/api/: dependencies.py  schemas.py
src/orchestrator/api/routes/: esg.py  governance.py  health.py  simulation.py
src/orchestrator/db/: engine.py  models.py
src/orchestrator/db/repositories/: event_repo.py  route_repo.py  scenario_repo.py  supplier_repo.py
src/orchestrator/esg/: calculator.py  standards.py
src/orchestrator/ingestion/: climate.py  comtrade.py  embedder.py  news.py  scheduler.py
src/orchestrator/simulation/: monte_carlo.py  optimizer.py  scenarios.py  scoring.py
src/orchestrator/sovereign/: local_llm.py
tests/: conftest.py  test_esg.py  test_simulation.py
